syntax = "proto3";

package microservice.api.v1.events;

option go_package = "github.com/sei-ri/microservice.io/api/v1/events;events";

message ProductCreated {
  string id = 1;
  string name = 2;
  string image_url = 3;
  int64 price = 4;
  int64 qty = 5;
}

message ProductQtyDeducted {
  string id = 1;
  int64 qty = 2;
}